Build the home page

--- a/smartcontactserver/src/main/resources/templates/home.html
+++ b/smartcontactserver/src/main/resources/templates/home.html
@@ -8,8 +8,12 @@
     <title>This is home page</title>
 </head>
 <body>
-    <section>
-        <h1>This is Home Page</h1>
+    <section class="banner d-flex justify-content-center align-items-center">
+        <div class="text-center">
+            <h1 class="font-weight-bold">Smart Contact Manager</h1>
+            <p>Start Collecting your contacts in very smarter way. We provide very efficient and smarter way of handling contacts.</p>
+            <button class="btn bg-primary btn-lg text-white">Get Start</button>
+        </div>
     </section>
 </body>
 </html>
