--- a/smartcontactserver/src/main/resources/templates/base.html
+++ b/smartcontactserver/src/main/resources/templates/base.html
@@ -8,10 +8,43 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
+    <!---Custom CSS from resource-static-css-->
+    <link rel="stylesheet" th:href="@{/css/style.css}" />
+
     <title th:text="${title}">Base Html</title>
 </head>
 <body>
-<h1>Hello, world!</h1>
+
+<!---Navbar Section--->
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <a class="navbar-brand" href="#">Smart Contact Manager</a>
+
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ml-auto text-uppercase">
+            <li class="nav-item active">
+                <a class="nav-link" th:href="@{/}" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Login</a>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/signup/}" href="#" tabindex="-1" aria-disabled="true">Signup</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+
+<!---End Navbar--->
 
 <div th:replace="${content}"></div>
 
@@ -26,5 +59,9 @@
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
 -->
+
+<!---Custom JS from resource-static-js-->
+<script th:src="@{/js/script.js}"></script>
+
 </body>
 </html>
