--- a/smartcontactserver/src/main/resources/static/css/style.css
+++ b/smartcontactserver/src/main/resources/static/css/style.css
@@ -6,6 +6,7 @@ body {
     background: #009688 !important;
 }
 
+/* HOME PAGE CSS Style */
 .banner{
     width: 100%;
     height: 93vh;
@@ -17,4 +18,81 @@ body {
 .my-card{
     padding: 20px;
     background: white;
+}
+
+.mt10 {
+    margin-top: 10px;
+}
+
+/* LOGIN FORM CSS Style */
+#login .container #login-row #login-column #login-box {
+    margin-top: 120px;
+    max-width: 600px;
+    height: 420px;
+    border: 1px solid #9C9C9C;
+    background-color: white;
+}
+#login .container #login-row #login-column #login-box #login-form {
+    padding: 20px;
+}
+#login .container #login-row #login-column #login-box #login-form #register-link {
+    margin-top: -85px;
+}
+
+/* SIDEBAR CSS Style */
+
+@media only screen and (max-width: 600px) {
+    .sidebar{
+        display: none;
+        width: 80% !important;
+        background: white;
+        height: 100vh;
+        position: fixed;
+        padding-top: 20px;
+    }
+
+    .content {
+        margin-left: 0% !important;
+    }
+}
+
+.sidebar {
+    width: 18%;
+    background: white;
+    height: 100%;
+    position: fixed;
+    padding-top: 30px;
+    z-index: 999999999999999999999999999;
+}
+
+.sidebar a{
+    display: block;
+    width: 100%;
+    padding: 10px 25px;
+    text-decoration: none;
+    color: gray;
+}
+
+.sidebar a:hover {
+    background: #e2e2e2;
+}
+
+.sidebar .divider {
+    height: .5px;
+    width: 100%;
+    background: #e2e2e2;
+    margin-top: 10px;
+}
+
+.sidebar .crossBtn {
+    position: absolute;
+    top: 0;
+    right: 35px;
+    font-size: 36px;
+    cursor: pointer;
+}
+
+/* CONTENT CSS Style */
+.content {
+    margin-left: 20%;
 }
