--- a/smartcontactserver/src/main/resources/templates/normal/base.html
+++ b/smartcontactserver/src/main/resources/templates/normal/base.html
@@ -7,6 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!---Custom CSS from resource-static-css-->
     <link rel="stylesheet" th:href="@{/css/style.css}" />
@@ -30,15 +31,11 @@
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="#" tabindex="-1" aria-disabled="true"><span th:text="${user.name}"></span></a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="#" th:href="@{/signin}" tabindex="-1" aria-disabled="true">Login</a>
-            </li>
-
-            <li class="nav-item">
-                <a class="nav-link" th:href="@{/signup/}" href="#" tabindex="-1" aria-disabled="true">Signup</a>
+                <a class="nav-link" th:href="@{/logout}" href="#" tabindex="-1" aria-disabled="true">Logout</a>
             </li>
         </ul>
     </div>
@@ -46,7 +43,37 @@
 
 <!---End Navbar--->
 
-<div th:replace="${content}"></div>
+<!---SideBar--->
+<div class="sidebar mt-2">
+    <span onclick="toggleSidebar()" class="crossBtn"> &times; </span>
+
+    <a href="#" th:href="@{/user/index}" class="item"> <i class="fas fa-home"></i> Home</a>
+    <a href="#" class="item"> <i class="fas fa-user-circle"></i> Your Profile</a>
+    <a href="#" class="item"> <i class="fas fa-id-card-alt"></i> View Contacts</a>
+    <a href="#" th:href="@{/user/add-contact}" class="item"> <i class="fas fa-pencil-alt"></i> Add Contact</a>
+    <a href="#" class="item"> <i class="fas fa-cogs"></i> Settings</a>
+    <a href="#" th:href="@{/logout}" class="item"> <i class="fas fa-sign-out-alt"></i> Logout</a>
+    <div class="divider"></div>
+</div>
+<!---End Sidebar--->
+
+<!---Content--->
+<div class="content mt-5">
+    <i onclick="toggleSidebar()" class="fas fa-bars m-3"></i>
+
+    <!--- Message Box --->
+    <div th:if="${session.message}" class="container">
+        <div th:classappend="${'alert-'+session.message.type}" class="alert text-center" role="alert">
+            <span th:text="${session.message.content}   "></span>
+        </div>
+
+        <th:block th:text="${#session.removeAttribute('message')}"></th:block>
+    </div>
+
+
+    <div th:replace="${content}"></div>
+</div>
+<!---End Content--->
 
 <!-- Optional JavaScript; choose one of the two! -->
 
@@ -61,8 +88,7 @@
 -->
 
 <!---Custom JS from resource-static-js-->
-<script th:src="@{/js/script.js}">
-
+<script type="text/javascript" th:src="@{/js/script.js}">
 </script>
 
 </body>
