fetch the contacts from database

--- a/smartcontactserver/src/main/resources/templates/normal/base.html
+++ b/smartcontactserver/src/main/resources/templates/normal/base.html
@@ -49,7 +49,7 @@
 
     <a href="#" th:href="@{/user/index}" class="item"> <i class="fas fa-home"></i> Home</a>
     <a href="#" class="item"> <i class="fas fa-user-circle"></i> Your Profile</a>
-    <a href="#" class="item"> <i class="fas fa-id-card-alt"></i> View Contacts</a>
+    <a href="#" th:href="@{/user/show-contacts}" class="item"> <i class="fas fa-id-card-alt"></i> View Contacts</a>
     <a href="#" th:href="@{/user/add-contact}" class="item"> <i class="fas fa-pencil-alt"></i> Add Contact</a>
     <a href="#" class="item"> <i class="fas fa-cogs"></i> Settings</a>
     <a href="#" th:href="@{/logout}" class="item"> <i class="fas fa-sign-out-alt"></i> Logout</a>
