--- a/smartcontactserver/src/main/resources/templates/normal/show_contacts.html
+++ b/smartcontactserver/src/main/resources/templates/normal/show_contacts.html
@@ -9,7 +9,11 @@
 </head>
 <body>
 <section>
-    <h1>This is show contacts page</h1>
+    <div class="card mr-3 ml-2">
+        <div class="card-body">
+            <h1 class="text-center">Your Contacts</h1>
+        </div>
+    </div>
 </section>
 </body>
 </html>
