Create the table to show the particular user contacts.

--- a/smartcontactserver/src/main/resources/templates/normal/show_contacts.html
+++ b/smartcontactserver/src/main/resources/templates/normal/show_contacts.html
@@ -12,6 +12,32 @@
     <div class="card mr-3 ml-2">
         <div class="card-body">
             <h1 class="text-center">Your Contacts</h1>
+
+            <table class="table">
+                <thead>
+                <tr>
+                    <th scope="col">Contact_Id</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Email</th>
+                    <th scope="col">Phone</th>
+                    <th scope="col">Action</th>
+                </tr>
+                </thead>
+
+                <tbody>
+
+                <tr th:each="c : ${contacts}">
+                    <th scope="row" th:text="${'SCM: '+c.cId}">1</th>
+                    <td th:text="${c.name}">Mark</td>
+                    <td th:text="${c.email}">Mark</td>
+                    <td th:text="${c.phone}">Mark</td>
+                    <td>
+                        <button class="btn btn-primary btn-sm">Update</button>
+                        <button class="btn btn-danger btn-sm">Delete</button>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
         </div>
     </div>
 </section>
