--- a/smartcontactserver/src/main/resources/templates/base.html
+++ b/smartcontactserver/src/main/resources/templates/base.html
@@ -16,7 +16,7 @@
 <body>
 
 <!---Navbar Section--->
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <a class="navbar-brand" href="#">Smart Contact Manager</a>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
