--- a/smartcontactserver/src/main/resources/templates/normal/show_contacts.html
+++ b/smartcontactserver/src/main/resources/templates/normal/show_contacts.html
@@ -38,6 +38,16 @@
                 </tr>
                 </tbody>
             </table>
+
+            <!---Pagination Part...--->
+            <nav aria-label="Page navigation example">
+                <ul class="pagination text-center">
+                    <li th:if="${currentPage!=0}" class="page-item"><a th:href="@{'/user/show-contacts/'+${currentPage-1}}" class="page-link" href="#">Previous</a></li>
+                    <li th:classappend="${currentPage==i-1?'active':''}" th:each="i :${#numbers.sequence(1,totalPages)}" class="page-item"><a th:href="@{'/user/show-contacts/'+${i-1}}" class="page-link" href="#"><span th:text="${i}"></span></a></li>
+                    <li th:if="${currentPage+1!=totalPages}" class="page-item"><a th:href="@{'/user/show-contacts/'+${currentPage+1}}" class="page-link" href="#">Next</a></li>
+                </ul>
+            </nav>
+
         </div>
     </div>
 </section>
