View the contact details after click on email

--- a/smartcontactserver/src/main/resources/static/css/style.css
+++ b/smartcontactserver/src/main/resources/static/css/style.css
@@ -96,3 +96,10 @@ body {
 .content {
     margin-left: 20%;
 }
+
+.my_profile_picture{
+    width: 35px;
+    height: 35px;
+    object-fit: cover;
+    border-radius: 50%;
+}
