--- a/smartcontactserver/src/main/resources/templates/normal/show_contacts.html
+++ b/smartcontactserver/src/main/resources/templates/normal/show_contacts.html
@@ -26,10 +26,15 @@
 
                 <tbody>
 
-                <tr th:each="c : ${contacts}">
+                <tr th:each="c :${contacts}">
                     <th scope="row" th:text="${'SCM: '+c.cId}">1</th>
-                    <td th:text="${c.name}">Mark</td>
-                    <td th:text="${c.email}">Mark</td>
+                    <td>
+                        <img src="" class="my_profile_picture" th:src="@{'/img/'+${c.image}}" alt="profile photo">
+                        <span th:text="${c.name}"></span>
+                    </td>
+                    <td>
+                        <a href="" th:href="@{'/user/'+${c.cId}+'/contact/'}"><span th:text="${c.email}"></span></a>
+                    </td>
                     <td th:text="${c.phone}">Mark</td>
                     <td>
                         <button class="btn btn-primary btn-sm">Update</button>
