--- a/smartcontactserver/src/main/resources/templates/normal/base.html
+++ b/smartcontactserver/src/main/resources/templates/normal/base.html
@@ -88,8 +88,26 @@
 -->
 
 <!---Custom JS from resource-static-js-->
-<script type="text/javascript" th:src="@{/js/script.js}">
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+<script>
+    function deleteContact(cid){
+        swal({
+            title: "Are you sure?",
+            text: "You want to delete this contact",
+            icon: "warning",
+            buttons: true,
+            dangerMode: true,
+        })
+            .then((willDelete) => {
+                if (willDelete) {
+                   window.location="/user/delete/"+cid;
+                } else {
+                    swal("Your contact is safe");
+                }
+            });
+    }
 </script>
+<script type="text/javascript" th:src="@{/js/script.js}"></script>
 
 </body>
 </html>
