--- a/smartcontactserver/src/main/resources/templates/normal/show_contacts.html
+++ b/smartcontactserver/src/main/resources/templates/normal/show_contacts.html
@@ -38,7 +38,7 @@
                     <td th:text="${c.phone}">Mark</td>
                     <td>
                         <button class="btn btn-primary btn-sm">Update</button>
-                        <button class="btn btn-danger btn-sm">Delete</button>
+                        <a href="#" th:onclick="|deleteContact(${c.cId})|" class="btn btn-danger btn-sm">Delete</a>
                     </td>
                 </tr>
                 </tbody>
