--- a/smartcontactserver/src/main/resources/templates/normal/base.html
+++ b/smartcontactserver/src/main/resources/templates/normal/base.html
@@ -31,7 +31,7 @@
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="#" tabindex="-1" aria-disabled="true"><span th:text="${user.name}"></span></a>
+                <a th:href="@{/user/profile}" class="nav-link" href="#" tabindex="-1" aria-disabled="true"><span th:text="${user.name}"></span></a>
             </li>
 
             <li class="nav-item">
@@ -48,7 +48,7 @@
     <span onclick="toggleSidebar()" class="crossBtn"> &times; </span>
 
     <a href="#" th:href="@{/user/index}" class="item"> <i class="fas fa-home"></i> Home</a>
-    <a href="#" class="item"> <i class="fas fa-user-circle"></i> Your Profile</a>
+    <a href="#" th:href="@{/user/profile}" class="item"> <i class="fas fa-user-circle"></i> Your Profile</a>
     <a href="#" th:href="@{/user/show-contacts/0}" class="item"> <i class="fas fa-id-card-alt"></i> View Contacts</a>
     <a href="#" th:href="@{/user/add-contact}" class="item"> <i class="fas fa-pencil-alt"></i> Add Contact</a>
     <a href="#" class="item"> <i class="fas fa-cogs"></i> Settings</a>
