Build: search function

--- a/smartcontactserver/src/main/resources/static/css/style.css
+++ b/smartcontactserver/src/main/resources/static/css/style.css
@@ -108,10 +108,9 @@ body {
 /* Search CSS Style */
 .search-container{
     position: relative;
-
 }
 
-.search-input{
+.search-result{
     position: absolute;
     background: white;
     width: 100%;
