Build: making responsive for mobile view

--- a/smartcontactserver/src/main/resources/static/css/style.css
+++ b/smartcontactserver/src/main/resources/static/css/style.css
@@ -118,3 +118,8 @@ body {
     border: 1px solid gray;
     display: none;
 }
+
+.active{
+    background: #009688 !important;
+    color: white !important;
+}
