--- a/smartcontactserver/src/main/resources/templates/normal/add_contact_form.html
+++ b/smartcontactserver/src/main/resources/templates/normal/add_contact_form.html
@@ -95,6 +95,13 @@
             selector: '#mytextarea'
         });
     </script>
+
+    <script>
+        $(document).ready(()=> {
+            $('.item').removeClass('active');
+            $('#add-link').addClass("active");
+        });
+    </script>
 </section>
 </body>
 </html>
