--- a/smartcontactserver/src/main/resources/templates/normal/user_dashboard.html
+++ b/smartcontactserver/src/main/resources/templates/normal/user_dashboard.html
@@ -27,6 +27,13 @@
             </div>
         </div>
     </div>
+
+    <script>
+        $(document).ready(()=> {
+            $('.item').removeClass('active');
+            $('#home-link').addClass("active");
+        });
+    </script>
 </section>
 </body>
 </html>
