--- a/smartcontactserver/src/main/resources/templates/normal/base.html
+++ b/smartcontactserver/src/main/resources/templates/normal/base.html
@@ -13,10 +13,13 @@
     <link rel="stylesheet" th:href="@{/css/style.css}" />
 
     <title th:text="${title}">Base Html</title>
-</head>
-<body>
 
-<!---Navbar Section--->
+    <!-- Option 2: jQuery, Popper.js, and Bootstrap JS --->
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    </head>
+    <body>
+
+    <!---Navbar Section--->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
     <a class="navbar-brand" href="#">Smart Contact Manager</a>
 
@@ -47,11 +50,11 @@
 <div class="sidebar mt-2">
     <span onclick="toggleSidebar()" class="crossBtn"> &times; </span>
 
-    <a href="#" th:href="@{/user/index}" class="item"> <i class="fas fa-home"></i> Home</a>
-    <a href="#" th:href="@{/user/profile}" class="item"> <i class="fas fa-user-circle"></i> Your Profile</a>
-    <a href="#" th:href="@{/user/show-contacts/0}" class="item"> <i class="fas fa-id-card-alt"></i> View Contacts</a>
-    <a href="#" th:href="@{/user/add-contact}" class="item"> <i class="fas fa-pencil-alt"></i> Add Contact</a>
-    <a href="#" class="item"> <i class="fas fa-cogs"></i> Settings</a>
+    <a id="home-link" href="#" th:href="@{/user/index}" class="item active"> <i class="fas fa-home"></i> Home</a>
+    <a id="profile-link" href="#" th:href="@{/user/profile}" class="item"> <i class="fas fa-user-circle"></i> Your Profile</a>
+    <a id="contacts-link" href="#" th:href="@{/user/show-contacts/0}" class="item"> <i class="fas fa-id-card-alt"></i> View Contacts</a>
+    <a id="add-link" href="#" th:href="@{/user/add-contact}" class="item"> <i class="fas fa-pencil-alt"></i> Add Contact</a>
+    <a id="setting-link" href="#" class="item"> <i class="fas fa-cogs"></i> Settings</a>
     <a href="#" th:href="@{/logout}" class="item"> <i class="fas fa-sign-out-alt"></i> Logout</a>
     <div class="divider"></div>
 </div>
@@ -78,11 +81,9 @@
 <!-- Optional JavaScript; choose one of the two! -->
 
 <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 
 <!-- Option 2: jQuery, Popper.js, and Bootstrap JS
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
 -->
