--- a/smartcontactserver/src/main/resources/templates/normal/profile.html
+++ b/smartcontactserver/src/main/resources/templates/normal/profile.html
@@ -52,6 +52,13 @@
             </div>
         </div>
     </div>
+
+    <script>
+        $(document).ready(()=> {
+            $('.item').removeClass('active');
+            $('#profile-link').addClass("active");
+        });
+    </script>
 </section>
 </body>
 </html>
