--- a/smartcontactserver/src/main/resources/templates/normal/show_contacts.html
+++ b/smartcontactserver/src/main/resources/templates/normal/show_contacts.html
@@ -23,6 +23,7 @@
                 </div>
             </div>
 
+            <div class="table-responsive">
             <table class="table">
                 <thead>
                 <tr>
@@ -57,6 +58,7 @@
                 </tr>
                 </tbody>
             </table>
+            </div>
 
             <!---Pagination Part...--->
             <nav aria-label="Page navigation example">
@@ -68,6 +70,13 @@
             </nav>
         </div>
     </div>
+
+    <script>
+        $(document).ready(()=> {
+            $('.item').removeClass('active');
+            $('#contacts-link').addClass("active");
+        });
+    </script>
 </section>
 
 <script type="text/javascript" th:src="@{/js/script.js}"></script>
